@@ -1,4 +1,4 @@
-# Copyright (C) 1998-2003 by the Free Software Foundation, Inc.
+# Copyright (C) 1998-2014 by the Free Software Foundation, Inc.
 #
 # This program is free software; you can redistribute it and/or
 # modify it under the terms of the GNU General Public License
@@ -157,8 +157,11 @@ class IncomingRunner(Runner):
                     os._exit(1)
             except Errors.DiscardMessage:
                 # Throw the message away; we need do nothing else with it.
-                syslog('vette', 'Message discarded, msgid: %s',
-                       msg.get('message-id', 'n/a'))
+                syslog('vette', """Message discarded, msgid: %s'
+        list: %s,
+        handler: %s""",
+                       msg.get('message-id', 'n/a'),
+                       mlist.real_name, handler)
                 return 0
             except Errors.HoldMessage:
                 # Let the approval process take it from here.  The message no
