@@ -33,6 +33,9 @@ Here is a history of user visible changes to Mailman.
 
   Bug fixes and other patches
 
+    - The vette log entry for a message discarded by a handler now includes
+      the list name and the name of the handler.  (LP: #558096)
+
     - The options CGI now rejects all but HTTP GET and POST requests.
       (LP: #1372199)
 
